<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TcoQlSeriesSupply_GetControl_v_1_x_x" Id="{236035d4-2579-0570-309f-b3163ca775c4}">
    <Declaration><![CDATA[TYPE TcoQlSeriesSupply_GetControl_v_1_x_x :
STRUCT
    Command : eTcoQWlSeriesSupplyGetCommands_v_1_x_x;
    {attribute addProperty Name "<#Nvalue#>"}
    NValue : USINT; //The number of the output or status register to which the command relates.
//Note that on single output supplies <N>=1 always.
//Note also that <N>= 3 refers to the AUX output. The AUX output has limited remote
//control functionality. For clarity, the commands where <N>= 3 can be used are
//explicitly commented; elsewhere only <N>= 1 or <N>= 2 can be used.
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>