<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TcoQlSeriesSupply_State_v_1_x_x" Id="{be010f51-dfa2-07f9-2749-d5929471a7c0}">
    <Declaration><![CDATA[TYPE TcoQlSeriesSupply_State_v_1_x_x : 
STRUCT
    {attribute addProperty Name "<#Raw Response#>"}
    Resposne : STRING(255);
    {attribute addProperty Name "<#NR1#>"}
    Nr1Value : INT; //<NR1> A number with no fractional part, i.e. an integer.
    {attribute addProperty Name "<#NR2#>"}
    Nr2Value : REAL; //<NR2> A number in fixed point format e.g. 11·52, 0·78 etc.
    {attribute addProperty Name "<#N #>"}
    NValue : USINT; //The number of the output or status register to which the command relates.
    //Note that on single output supplies <N>=1 always.
    //Note also that <N>= 3 refers to the AUX output. The AUX output has limited remote
    //control functionality. For clarity, the commands where <N>= 3 can be used are
    //explicitly commented; elsewhere only <N>= 1 or <N>= 2 can be used.
    {attribute addProperty Name "<#Convert Message#>"}
    ConvertMessage : STRING;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>